--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   font-family: Rubik, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: url("/static/mesh-gradient.png"),
+  background: url("/static/mesh-gradient.webp"),
     linear-gradient(to bottom, #232526, #414345);
   color: #fafad2;
   background-repeat: no-repeat;
